--- a/src/pages/Dashboard/style.module.css
+++ b/src/pages/Dashboard/style.module.css
@@ -1,12 +1,5 @@
-.container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .wrapper {
   min-height: 500px;
-  margin: 50px;
-  width: 90%;
+  margin: 50px auto;
   max-width: 1440px;
 }
